test/classes/delete-free/tests-from-design-overview/generic-collection-owned-borrow-error.good
generic-collection-owned-borrow-error.chpl:11: In function 'test':
generic-collection-owned-borrow-error.chpl:14: error: unresolved type specifier 'Collection(type MyClass)'
generic-collection-owned-borrow-error.chpl:3: note: candidates are: Collection(type element)
